# Sentry-USB-Rusty

./: .gitignore  Cargo.toml  NOTICE  README.md  build-image.sh  check.sh  install-pi.sh
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  cla.yml  disk-reader.yml  wiki-sync.yml
crates/api/: Cargo.toml
crates/api/src/: archive_mount_lock.rs  auth.rs  away_mode.rs  backup.rs  ble.rs  ble_debug.rs  charging.rs  community.rs  drives_handler.rs  files.rs  healthcheck.rs  keep_accessory.rs  lib.rs  lock_chime.rs  logs.rs  notification_center.rs  notifications.rs  preferences.rs  router.rs  snapshots.rs  status.rs  storage_repair.rs  system.rs  travel_mode.rs  update.rs
crates/cloud_crypto/: Cargo.toml
crates/cloud_crypto/src/: aad.rs  ids.rs
crates/cloud_uploader/src/: charges.rs  encrypt.rs  state.rs  sync.rs  uploader.rs
crates/config/src/: lib.rs
crates/disk_reader/: Cargo.toml
crates/disk_reader/src/: archive.rs  camfs.rs  device.rs  gpt.rs  http.rs  main.rs  mbr.rs
crates/disk_reader/src/xfs/: attr.rs  attr_bptree.rs  attr_node.rs  attr_shortform.rs  bmbt_rec.rs  btree.rs  da_btree.rs  dinode.rs  dinode_core.rs  dir3.rs  dir3_block.rs  dir3_lf.rs  dir3_sf.rs  fs.rs  mod.rs  reader.rs  shim.rs  utils.rs  volume.rs
crates/disk_reader/tests/: make_golden_image.sh
crates/drives/: Cargo.toml
crates/drives/examples/: import_stats.rs
crates/drives/src/: aggregate_telemetry.rs  charging.rs  db.rs  grouper.rs  lib.rs  processor.rs  schema.rs  syncguard.rs  types.rs
crates/notify/src/: lib.rs  sns.rs  telegram.rs
crates/sentryusb/: Cargo.toml
crates/sentryusb/src/: main.rs  migrate.rs
crates/tesla_ble/: Cargo.toml
crates/tesla_telemetry/: Cargo.toml
crates/usb_gadget/: Cargo.toml
crates/usb_gadget/src/: cycle_lock.rs  lib.rs  snapshot.rs
pi-gen-sources/00-sentryusb-tweaks/: 00-run.sh
run/: archiveloop  awake_start  awake_stop  enable_gadget.sh  make_snapshot.sh  post-archive-process.sh
run/cifs_archive/: archive-clips.sh  connect-archive.sh
run/nfs_archive/: archive-clips.sh  disconnect-archive.sh
run/rclone_archive/: archive-clips.sh
run/rsync_archive/: archive-clips.sh
server/ble/: sentryusb-ble.py  sentryusb-ble.service  sentryusb-telemetry.service
setup/pi/: 99-sentryusb-ble-hci.rules  apply-runtime-patches.sh  avahi-ipv4-only.sh  configure.sh  sentryusb-ble-adv.service  sentryusb-ble-adv.sh  sentryusb-ble-wants-bluetooth.conf  setup-sentryusb
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css
wiki/: Archive-Methods.md  FAQ.md  Getting-Started.md  Home.md  Notifications.md  Privacy.md  Rusty-Migration.md  Sentry-Cloud.md  Setup-Wizard-Guide.md  Troubleshooting.md  _Footer.md  _Sidebar.md
(+140 files in other folders)
