[package]
name = "disk_reader"
version = "0.1.0"
edition = "2021"
license-file.workspace = true
description = "Read-only desktop reader for SentryUSB SSDs (GPT + XFS + snapshot exFAT/FAT32)"

[[bin]]
name = "sentryusb-disk-reader"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
chrono.workspace = true

# serve mode (localhost HTTP for Sentry Studio)
tokio.workspace = true
axum = "0.8"
bytes = "1"
tokio-stream = "0.1"
getrandom = "0.4"
hex = "0.4"

# Vendored libxfuse (xfs-fuse 0.7.1, BSD-2-Clause) dependencies.
bincode-next = { version = "2.1.0", default-features = false, features = ["derive", "std"] }
bitflags = "2.4"
byteorder = "1.4.3"
cfg-if = "1.0"
crc = "3.4.0"
enum_dispatch = "0.3.12"
num-derive = "0.4.2"
num-traits = "0.2.14"
uuid = "1.0"

# CAM-partition filesystems inside snap.bin
fatfs = "0.3"
exfat = { path = "vendor/exfat" }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
# The vendored libxfuse sources carry their upstream rstest test suite.
rstest = "0.26"
