[package]
name = "sentryusb-gadget"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ring = "0.17"
hex = "0.4"

sentryusb-shell = { path = "../shell", package = "sentryusb-shell" }

# unix (not just linux): cycle_lock's flock also runs on the macOS dev harness
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
